[SHELL32] Add two missing AVIs. By Jared Smudde. CORE-11641

svn path=/trunk/; revision=72968